# connectedbyairm

./: TO-DO.md  airm.py  airm100.py  airm2html.py  aixm.py  aixm2html.py  aixm_adr.py  aixm_adr2html.py  amxm.py  amxm2html.py  fixm.py  fixm2html.py  fixm_overlap_comparator.py  json2html.py  main.py  menus.py  my_zip.py  pyproject.toml  xlsx2json.py
data/json/: fixm-mapping.json
data/old_files/: AIRM 1.0.0.xlsx
data/xlsx/: AIXM_Semantic_Correspondence_Report.xlsx  AMXM_Semantic_Correspondence_Report.xlsx  FIXM classes.xlsx  aixm_mapping_merged.xlsx  connected_index.xlsx  mapping FIXM 4.2.0.xlsx
docs/: community.html  contact-us.html  developers-1.html  developers.html  documentation.html  faq.html  search.html  to-do-nov-2020.md  viewer-with-supplements.html  viewer.html
docs/announcements/: 01-01-2020-AIRM-1.0.1-is-available.html
docs/developers/: advanced-search.html  airm-change-request.html  aixm-2.0.0-to-airm-1.0.0.html  aixm-5.1.1-adr-23.5.0-extension-to-airm-1.0.0.html  aixm-5.1.1-to-airm-1.0.0.html  amxm-2.0.0-to-airm-1.0.0-old.html  amxm-2.0.0-to-airm-1.0.0.html  api.html  concept-list-example.html  concept-list-template.html  downloads.html  fixm-4.2.0-to-airm-1.0.0.html  semantic-correspondences.html
docs/documentation/: AIRM_license.txt  airm-change-management.html  airm-components.html  airm-for-swim.html  airm-history.html  airm-information-exchange-models.html  airm-license.html  airm-training.html  archive.html  conformance.html  european-supplement.html  semantic-interoperability.html  (+3 more)
old_code/: amxm2html_old.py  amxm_overlap_comparator.py
(+7679 files in other folders)
