[tool.poetry]
name = "structuredcode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
xlrd = "^1.2.0"
bs4 = "^0.0.1"
flask = "^1.1.2"
xlsxwriter = "^1.2.9"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
